Removed useless backup file, and fixed mouse not showing up.

--- a/styles/header.css
+++ b/styles/header.css
@@ -9,7 +9,7 @@ body {
 html, body {
     margin: 0;
     height: 100%;
-    cursor: url('/img/cursor.png'), url(/img/cursor.cur), auto;
+    cursor: url('img/cursor.png'), auto;
 }
 .center {
     text-align: center;
